# silksong-agent

./: .env.example  .gitignore  README.md  pyproject.toml  train.py  tune.py
plugin/: Directory.Build.props.example  SilksongAgent.csproj
plugin/Source/: Plugin.cs
plugin/Source/Core/: BossAnimationMapper.cs  CommandLineArgs.cs  Constants.cs  EpisodeResetter.cs  GameStateCollector.cs  PlayerAnimationMapper.cs  RaycastSensor.cs
plugin/Source/Managers/: ActionManager.cs  BossProjectileManager.cs  BossStateManager.cs  DebugOverlayManager.cs  NoFxManager.cs  SharedMemoryManager.cs  StepModeManager.cs
plugin/Source/Patches/: AudioSourcePatch.cs  BossDeathPatch.cs  CameraRenderScaledPatch.cs  CursorLockPatch.cs  FreezeMomentPatch.cs  PlayerDeathPatch.cs  SkipIntroPatch.cs  SteamDisablePatch.cs
scripts/: export_tensorboard_data.py
silksong/: __init__.py  constants.py  env.py  networks.py  shared_memory.py
